adding final page

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ nav.navbar {
 }
 
 #pcgaming .card img {
-	height: 400px:
+	height: 400px;
 }
 
 .imgorder {
@@ -189,3 +189,7 @@ nav.navbar {
 		left: 5%;
 	}
 }
+
+
+
+
