--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* generales */
 
 body {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Kumhb', sans-serif;
 	overflow-x: hidden;
 }
 
@@ -56,7 +56,6 @@ nav.navbar {
 	letter-spacing: 5px;
 	font-size: 2rem;
 	text-shadow: 1.rem 1.rem 8.rem black;
-
 }
 
 .caption .btn-lg {
