--- a/css/fixed.css
+++ b/css/fixed.css
@@ -1,7 +1,8 @@
 /*--- Bootstrap Mobile Gutter Fix --*/
-.row, .container-fluid {
-margin-left: 0px!important;
-margin-right: 0px!important;
+.row,
+.container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
 /*--- Fixed Video Background iOS/Mobile Style--*/
@@ -13,6 +14,7 @@ margin-right: 0px!important;
   width: 100%;
   height: 100%;
 }
+
 #video {
   position: fixed;
   display: block;
@@ -23,10 +25,11 @@ margin-right: 0px!important;
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   will-change: transform;
   z-index: -1000;
 }
+
 video {
   position: fixed;
   top: 50%;
